Fix bottom of block latex elements being cut off

--- a/css/note.css
+++ b/css/note.css
@@ -48,10 +48,6 @@ th:empty {
   padding: 0;
 }
 
-.latex-container[data-displaymode="block"] > * {
-  overflow-y: hidden;
-}
-
 .latex-container {
   text-indent: 0;
 }
